// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
    }
  }
>
  <GlobalMenu
    localBackNavi={
      Object {
        "link": "/",
        "text": "マップへ",
      }
    }
    permanentLeftNavi={true}
    topBarPosition="fixed"
  >
    <ForwardRef(Box)
      sx={
        Object {
          "marginTop": 5,
          "marginX": 10,
        }
      }
    >
      <ForwardRef(Grid)
        container={true}
        spacing={4}
      >
        <ForwardRef(Grid)
          item={true}
          xs={8}
        >
          <ArticlePaper
            variant="main"
          >
            <div />
          </ArticlePaper>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={4}
        >
          <ArticlePaper
            variant="side"
          >
            TODO: サイドバー
          </ArticlePaper>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Box)>
  </GlobalMenu>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests mobile 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
    }
  }
>
  <GlobalMenu
    localBackNavi={
      Object {
        "link": "/",
        "text": "マップへ",
      }
    }
    permanentLeftNavi={false}
    topBarPosition="fixed"
  >
    <ForwardRef(Box)
      sx={
        Object {
          "marginTop": 1,
          "marginX": 0,
        }
      }
    >
      <ForwardRef(Grid)
        container={true}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <ArticlePaper
            variant="main"
          >
            <div />
          </ArticlePaper>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <ArticlePaper
            variant="side"
          >
            TODO: サイドバー
          </ArticlePaper>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Box)>
  </GlobalMenu>
</ForwardRef(Box)>
`;
